# wacc_compiler

./: .gitignore  ChangeLog.md  FailedTests.text  LICENSE  Makefile  README.md  ValidPrograms.txt  WACC-HASKELL.cabal  WACC-Haskell.cabal  WACCLangSpec.tex  classTests  compile  runAllTests  stack.yaml
Source/: BasicCombinators.hs  Declarations.hs  Definitions.hs  Parser.hs
Wiki/: HUnit_guide.hs  WACCLangSpecNew.tex
app/: Compiler.hs
src/: BasicCombinators.hs  BugFixes.txt  Definitions.hs  DefinitionsFactor.hs  Exploratory.hs  Lib.hs  Main.hs  Parser.hs  ParserCombinators.hs  ParserFactor.hs  TypeCheck.hs  testParser.hs
src/CodeGen/: Assembly.hs  AssemblyGenerator.hs  AssignLHS.hs  AssignRHS.hs  Expression.hs  Function.hs  InBuiltFunctions.hs  PairElem.hs  Program.hs  Statement.hs  Translate.hs
src/ErrorMessages/: Semantic.hs
src/Optimisations/: ConstantEval.hs  ControlFlowAnalysis.hs  Optimiser.hs
src/Parser/: BasicCombinators.hs  Class.hs  Combinators.hs  Expression.hs  Function.hs  Identifier.hs  Lexer.hs  LexicalResolver.hs  Program.hs  Statement.hs  Type.hs
src/Parsers/: Expression.hs  Function.hs  Lexer.hs  PossibleIssues  Statement.hs  Type.hs
src/Semantics/: Definitions.hs  ErrorMessages.hs  ErrorMsgs.hs  ScopeChecker.hs  ScopeErrorGenerator.hs  SymbolTable.hs  SymbolTable2.hs  TypeChecker.hs
src/Semantics/Annotators/: AST.hs  Class.hs  Expression.hs  Function.hs  Identifier.hs  Statement.hs  Test.hs  Type.hs  Util.hs
src/Semantics/TypeChecker/: AssignLHS.hs  AssignRHS.hs  Class.hs  Expression.hs  Function.hs  Program.hs  Statement.hs  (+2 more)
src/Utilities/: Declarations.hs  Def2.hs  Definitions.hs
src/Utility/: BasicCombinators.hs  Declarations.hs  Definitions.hs  DefinitionsFactor.hs
test/: .Spec.hs.swp  ParserFactor.hs  Spec.hs
(+111 files in other folders)
