name:                WACC-Haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/WACC-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/Utility, src/Parsers
  exposed-modules:     Parser, Utility.Declarations, Utility.Definitions, Utility.BasicCombinators
                     , Parsers.Lexer, Parsers.Expression, Parsers.Function, Parsers.Statement
                     , Parsers.Type
  build-depends:       base >= 4.7 && < 5
                      , mtl
                      , transformers
  default-language:    Haskell2010

executable WACC-Haskell-exe
  hs-source-dirs:      app
  main-is:             Compiler.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , WACC-Haskell
                     , mtl
  default-language:    Haskell2010

test-suite WACC-Haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test,src
  main-is:             Spec.hs
  build-depends:       base
                     , WACC-Haskell
                     , HUnit
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/WACC-Haskell
